@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.287 2008/09/09 06:05:05 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.288 2008/09/24 03:19:06 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -2049,8 +2049,10 @@ set_label()
 	char* text;
 	parse_label_options( this_label );
 	text = try_to_get_string();
-	if (text)
+	if (text) {
+	    free(this_label->text);
 	    this_label->text = text;
+	}
 
 	/* HBB 20001021: new functionality. If next token is a ','
 	 * treat it as a numeric expression whose value is to be
@@ -4981,6 +4983,7 @@ load_tic_user(AXIS_INDEX axis)
 	if (ticlabel && axis_array[axis].is_timedata
 	    && (equals(c_token,",") || equals(c_token,")"))) {
 	    c_token = save_token;
+	    free(ticlabel);
 	    ticlabel = NULL;
 	}
 
@@ -4995,6 +4998,7 @@ load_tic_user(AXIS_INDEX axis)
 
 	/* add to list */
 	add_tic_user(axis, ticlabel, ticposition, ticlevel);
+	free(ticlabel);
 
 	/* expect "," or ")" here */
 	if (!END_OF_COMMAND && equals(c_token, ","))
@@ -5031,16 +5035,19 @@ prune_dataticks(struct ticmark *list)
 {
     struct ticmark a = {0.0,NULL,0,NULL};
     struct ticmark *b = &a;
+    struct ticmark *tmp;
 
     while (list) {
 	if (list->level < 0) {
 	    free(list->label);
-	    list->label = NULL;
+	    tmp = list->next;
+	    free(list);
+	    list = tmp;
 	} else {
 	    b->next = list;
 	    b = list;
+	    list = list->next;
 	}
-	list = list->next;
     }
     b->next = NULL;
     return a.next;
